[package]
name = "cryptool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5.0", features = ["traits-preview"] }
clap = { version = "4.5.1", features = ["derive"] }
crypto = { version = "0.5.1", features = ["digest"] }
dunce = "1.0.4"
hex = "0.4.3"
itertools = "0.12.1"
md-5 = { version = "0.10.6" }
pathdiff = "0.2.1"
sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
wild = "2.2.1"
